--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.6",
-    "angular": "~1.4.8"
+    "angular": "~1.4.8",
+    "angular-route": "~1.4.8"
   }
 }
